[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/GUI/HauntedHenhouse_3.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Crosshair/Frame/Ramas.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Menu Selection Click.wav" type="AudioStream" id=4]
[ext_resource path="res://Crosshair.gd" type="Script" id=5]
[ext_resource path="res://Assets/fonts/SamuraiBlast-8MnyD.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Crosshair/Yellow/1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Crosshair/Yellow/4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Crosshair/Yellow/17.png" type="Texture" id=9]
[ext_resource path="res://Assets/Crosshair/Yellow/20.png" type="Texture" id=10]
[ext_resource path="res://Assets/Crosshair/Yellow/22.png" type="Texture" id=11]
[ext_resource path="res://Assets/Crosshair/Yellow/28.png" type="Texture" id=12]
[ext_resource path="res://Assets/Crosshair/Yellow/6.png" type="Texture" id=13]
[ext_resource path="res://Assets/Crosshair/Yellow/40.png" type="Texture" id=14]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.333333, 0.333333, 0.0196078, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.443137, 0.443137, 0.0196078, 1 )
border_width_bottom = 5
border_color = Color( 0.238281, 0.238281, 0.0127983, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.206055, 0.206055, 0.0110674, 1 )
shadow_size = 5

[sub_resource type="Theme" id=5]
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 40
extra_spacing_top = 10
font_data = ExtResource( 6 )

[node name="Crosshair" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 514, 301.5 )
scale = Vector2( 0.279348, 0.303931 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 513.5, 300.5 )
scale = Vector2( 2.00977, 1.17773 )

[node name="Volver" type="Button" parent="."]
margin_left = 23.0
margin_top = 20.0
margin_right = 181.0
margin_bottom = 78.0
theme = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Volver"

[node name="Selection" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Yellow_1" type="TextureButton" parent="."]
margin_left = 193.0
margin_top = 129.0
margin_right = 705.0
margin_bottom = 641.0
rect_scale = Vector2( 0.13, 0.13 )
texture_normal = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="Yellow_1"]
position = Vector2( 261.538, 250 )
scale = Vector2( 8.65385, 8.41346 )
texture = ExtResource( 7 )

[node name="Yellow_2" type="TextureButton" parent="."]
margin_left = 273.0
margin_top = 129.0
margin_right = 785.0
margin_bottom = 641.0
rect_scale = Vector2( 0.13, 0.13 )
texture_normal = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Yellow_2"]
position = Vector2( 269.231, 246.154 )
scale = Vector2( 8.90386, 8.90384 )
texture = ExtResource( 8 )

[node name="Yellow_3" type="TextureButton" parent="."]
margin_left = 353.0
margin_top = 129.0
margin_right = 865.0
margin_bottom = 641.0
rect_scale = Vector2( 0.13, 0.13 )
texture_normal = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Yellow_3"]
position = Vector2( 261.538, 253.846 )
scale = Vector2( 8.19231, 9.39423 )
texture = ExtResource( 13 )

[node name="Yellow_4" type="TextureButton" parent="."]
margin_left = 433.0
margin_top = 129.0
margin_right = 945.0
margin_bottom = 641.0
rect_scale = Vector2( 0.13, 0.13 )
texture_normal = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Yellow_4"]
position = Vector2( 253.846, 246.154 )
scale = Vector2( 8.30288, 9.02404 )
texture = ExtResource( 9 )

[node name="Yellow_5" type="TextureButton" parent="."]
margin_left = 513.0
margin_top = 129.0
margin_right = 1025.0
margin_bottom = 641.0
rect_scale = Vector2( 0.13, 0.13 )
texture_normal = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Yellow_5"]
position = Vector2( 261.538, 246.154 )
scale = Vector2( 8.19231, 8.91346 )
texture = ExtResource( 10 )

[node name="Yellow_6" type="TextureButton" parent="."]
margin_left = 593.0
margin_top = 129.0
margin_right = 1105.0
margin_bottom = 641.0
rect_scale = Vector2( 0.13, 0.13 )
texture_normal = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Yellow_6"]
position = Vector2( 255.923, 251.769 )
scale = Vector2( 8.30287, 8.30289 )
texture = ExtResource( 11 )

[node name="Yellow_7" type="TextureButton" parent="."]
margin_left = 673.0
margin_top = 129.0
margin_right = 1185.0
margin_bottom = 641.0
rect_scale = Vector2( 0.13, 0.13 )
texture_normal = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Yellow_7"]
position = Vector2( 261.538, 246.154 )
scale = Vector2( 7.95192, 8.19231 )
texture = ExtResource( 12 )

[node name="Yellow_8" type="TextureButton" parent="."]
margin_left = 753.0
margin_top = 129.0
margin_right = 1265.0
margin_bottom = 641.0
rect_scale = Vector2( 0.13, 0.13 )
texture_normal = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Yellow_8"]
position = Vector2( 253.846, 253.846 )
scale = Vector2( 12.0841, 12.0841 )
texture = ExtResource( 14 )

[connection signal="pressed" from="Volver" to="." method="_on_Volver_pressed"]
[connection signal="pressed" from="Yellow_1" to="." method="_on_Yellow_1_pressed"]
[connection signal="pressed" from="Yellow_2" to="." method="_on_Yellow_2_pressed"]
[connection signal="pressed" from="Yellow_3" to="." method="_on_Yellow_3_pressed"]
[connection signal="pressed" from="Yellow_4" to="." method="_on_Yellow_4_pressed"]
[connection signal="pressed" from="Yellow_5" to="." method="_on_Yellow_5_pressed"]
[connection signal="pressed" from="Yellow_6" to="." method="_on_Yellow_6_pressed"]
[connection signal="pressed" from="Yellow_7" to="." method="_on_Yellow_7_pressed"]
[connection signal="pressed" from="Yellow_8" to="." method="_on_Yellow_8_pressed"]
